add java.desktop/java.awt.peer
GitOrigin-RevId: adb2c188b9e21c9621529c51e70325c57a946879